--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -14,6 +14,7 @@
   <!-- include source files here... -->
   <script src="src/Customer.js"></script>
   <script src="src/Account.js"></script>
+  <script src="src/TransactionPrinter.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/CustomerSpec.js"></script>
