Added TransactionManager and createTransaction method to account

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -15,6 +15,7 @@
   <script src="src/Customer.js"></script>
   <script src="src/Account.js"></script>
   <script src="src/TransactionPrinter.js"></script>
+  <script src="src/TransactionManager.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/CustomerSpec.js"></script>
