--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -20,6 +20,7 @@
   <!-- include spec files here... -->
   <script src="spec/CustomerSpec.js"></script>
   <script src="spec/AccountSpec.js"></script>
+  <script src="spec/TransactionManagerSpec.js"></script>
 
 </head>
 
