--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -16,11 +16,13 @@
   <script src="src/Account.js"></script>
   <script src="src/TransactionPrinter.js"></script>
   <script src="src/TransactionManager.js"></script>
+  <script src="src/Transaction.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/CustomerSpec.js"></script>
   <script src="spec/AccountSpec.js"></script>
   <script src="spec/TransactionManagerSpec.js"></script>
+  <script src="spec/TransactionSpec.js"></script>
 
 </head>
 
