--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -21,6 +21,7 @@
   <!-- include spec files here... -->
   <script src="spec/CustomerSpec.js"></script>
   <script src="spec/AccountSpec.js"></script>
+  <script src="spec/TransactionPrinterSpec.js"></script>
   <script src="spec/TransactionManagerSpec.js"></script>
   <script src="spec/TransactionSpec.js"></script>
 
